Generates css for print layout. Removes cell spacing. Looks more normal now. Possibly fixes #8

--- a/app/stylesheets/print.scss
+++ b/app/stylesheets/print.scss
@@ -26,6 +26,10 @@
     }
 
     tbody {
+      tr > td {
+        margin: 0;
+        padding: 0;
+      }
       tr > td:nth-child(2) {
         text-align: right;
       }
